feat: rename project to HashMark and update README with new description.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Markdown Editor</title>
+<title>HashMark</title>
 
 <!-- Highlight.js for code syntax highlighting -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/github.min.css"
@@ -2166,7 +2166,7 @@ mindmap
 
   function updateTitle() {
     const match = editor.value.match(/^\n*#\s*(.+)/)
-    document.title = match?.[1] ?? 'Markdown Editor'
+    document.title = match?.[1] ?? 'HashMark'
   }
 
   async function compress(string) {
